<?xml version="1.0"?>
<package format="2">
  <name>joint_example</name>
  <version>0.0.0</version>
  <description>joint example</description>

  <maintainer email="yk@todo.todo">yk</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>


<!-- <export>
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
</export> -->

  <export>
  <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />
  </export>
</package>
